# ChangeLog for sci-calculators/calcoo
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-calculators/calcoo/ChangeLog,v 1.6 2007/02/22 01:23:47 jokey Exp $

  22 Feb 2007; Markus Ullmann <jokey@gentoo.org> ChangeLog:
  Redigest for Manifest2

  27 Apr 2006; Alec Warner <antarus@gentoo.org> files/digest-calcoo-1.3.15,
  files/digest-calcoo-1.3.16, Manifest:
  Fixing SHA256 digest, pass four

*calcoo-1.3.16 (10 Apr 2006)

  10 Apr 2006; Marcus D. Hanwell <cryos@gentoo.org> +calcoo-1.3.16.ebuild:
  Version bump.

  08 Dec 2005; Marcus D. Hanwell <cryos@gentoo.org> calcoo-1.3.15.ebuild:
  Stable on amd64.

*calcoo-1.3.15 (24 Dec 2004)

  24 Dec 2004; Olivier Fisette <ribosome@gentoo.org> +metadata.xml,
  +calcoo-1.3.15.ebuild:
  Moved from app-sci/calcoo to sci-calculators/calcoo.

  13 Dec 2004; Jason Wever <weeve@gentoo.org> calcoo-1.3.15.ebuild:
  Stable on sparc.

  31 Oct 2004; Tom Martin <slarti@gentoo.org> calcoo-1.3.15.ebuild:
  Marked ~amd64 for bug 69353.

*calcoo-1.3.15 (08 Aug 2003)

  08 Aug 2003; George Shapovalov <george@gentoo.org> calcoo-1.3.15.ebuild :
  new version (#26011), added some docs
  thanks to Anthony Lander <anthony.lander@sympatico.ca> for notification

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*calcoo-1.3.13 (01 Nov 2002)

  01 Nov 2002; George Shapovalov <george@gentoo.org> calcoo-1.3.13.ebuild :
  
  first commit
  Calcoo is a good scientific calculator, supports RPN
  and algebraic modes.
  ebuild submitted by Ryzhyk Eugeney <rzheka@users.sourceforge.net>