@@ -1,8 +1,6 @@
-# Copyright 1999-2006 Gentoo Foundation
+# Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sci-calculators/calcoo/calcoo-1.3.16.ebuild,v 1.1 2006/04/10 00:08:01 cryos Exp $
-
-IUSE=""
+# $Header: /var/cvsroot/gentoo-x86/sci-calculators/calcoo/calcoo-1.3.16.ebuild,v 1.2 2007/07/25 09:33:25 drac Exp $
 
 DESCRIPTION="Scientific calculator designed to provide maximum usability"
 HOMEPAGE="http://calcoo.sourceforge.net/"
@@ -11,8 +9,10 @@ SRC_URI="mirror://sourceforge/calcoo/${P}.tar.gz"
 LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS="~amd64 ~ppc ~sparc ~x86"
+IUSE=""
 
-DEPEND="=x11-libs/gtk+-1.2*"
+RDEPEND=">=x11-libs/gtk+-2"
+DEPEND="${RDEPEND}"
 
 src_compile() {
 	econf --disable-gtktest || die "econf failed."
@@ -20,6 +20,6 @@ src_compile() {
 }
 
 src_install() {
-	make DESTDIR=${D} install || die "make install failed."
+	make DESTDIR="${D}" install || die "make install failed."
 	dodoc AUTHORS ChangeLog NEWS README TODO
 }
