@@ -1,6 +1,9 @@
 # ChangeLog for sci-calculators/calcoo
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-calculators/calcoo/ChangeLog,v 1.6 2007/02/22 01:23:47 jokey Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-calculators/calcoo/ChangeLog,v 1.7 2007/07/25 09:33:25 drac Exp $
+
+  25 Jul 2007; Samuli Suominen <drac@gentoo.org> calcoo-1.3.16.ebuild:
+  Fix invalid depend, requires GTK+-2.0 instead of GTK+-1.2.
 
   22 Feb 2007; Markus Ullmann <jokey@gentoo.org> ChangeLog:
   Redigest for Manifest2
